--- a/13 - Slide in on Scroll/style.css
+++ b/13 - Slide in on Scroll/style.css
@@ -8,6 +8,10 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
+  width: 210mm;  /* A4 width */
+  height: 297mm; /* A4 height */
+  overflow: hidden; /* Prevents scrollbar from appearing */
 }
 
 *, *:before, *:after {
@@ -19,34 +23,23 @@ h1 {
 }
 
 .site-wrap {
-  max-width: 700px;
-  margin: 100px auto;
+  width: 100%;
+  height: 100%;
   background: white;
-  padding: 40px;
+  padding: 20mm;
   text-align: justify;
 }
 
-.align-left {
-  float: left;
-  margin-right: 20px;
-}
-
-.align-right {
-  float: right;
-  margin-left: 20px;
+.align-left, .align-right {
+  width: 100%;
+  margin: 20px 0;
+  display: block;
 }
 
 .slide-in {
+  width: 100%;
   opacity: 0;
   transition: all 0.5s;
-}
-
-.align-left.slide-in {
-  transform: translateX(-30%) scale(0.95);
-}
-
-.align-right.slide-in {
-  transform: translateX(30%) scale(0.95);
 }
 
 .slide-in.active {
